# cloneweb

./: README.md  docker-compose.yml  package-lock.json  package.json
api/: Dockerfile  config_db.py  main.py  pyproject.toml
api/models/: account.py  base_models.py
backend/: Dockerfile  config_db.py
fontend/: Dockerfile  package-lock.json  package.json
web/: Dockerfile
