[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["ducnv <ducnv@otani-trading.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
peewee = "^3.17.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
